@@ -45,6 +45,7 @@
 #include <netinet/in.h>
 #endif
 
+#include <sys/socket.h>
 #include <netinet/in.h>
 #include <netinet/ip.h>
 #include <arpa/inet.h>
