@@ -1,3 +1,6 @@
+2019-08-31
+- Fix various c11 compile issues
+
 2019-08-24
 - Add vlan tags dot1qVlanId, 243, 254 - #182
 - Fix sflow issue with Arista switches
